@@ -73,6 +73,8 @@
     * FIX: Alias values of host/service/contact groups need to be set and unique
            within the group
     * Suggest use default value for filesystem levels that make sense
+    * Valuespec: CascadingDropdown now able to process choice values from functions
+    * Freshness checking for classical passive Nagios checks (custom_checks)
 
 1.2.2b3:
     Checks & Agents:
